[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/global/SoundMixer.gd" type="Script" id=1]

[node name="SoundMixer" type="Node2D"]
script = ExtResource( 1 )

[node name="GlobalMixer" type="AudioStreamPlayer" parent="."]

[node name="GlobalMixerTweenOut" type="Tween" parent="."]

[node name="GlobalMixerTweenIn" type="Tween" parent="."]

[connection signal="tween_completed" from="GlobalMixerTweenOut" to="." method="_on_GlobalMixerTweenOut_tween_completed"]
